# ot-harjoitustyo

./: .gitignore  README.md
expiration_date_tracking_app/: .coveragerc  pyproject.toml  pytest.ini  tasks.py
expiration_date_tracking_app/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
expiration_date_tracking_app/src/: build.py  database_connection.py  index.py  initialize_database.py
expiration_date_tracking_app/src/entities/: classDiagram.mmd  department.py  employee.py  merchant.py  permission.py  product.py  shelf.py  store.py  temporary_password.py  tracked_product.py  user.py  user_role.py
expiration_date_tracking_app/src/repositories/: department_repository.py  permission_repository.py  product_repository.py  shelf_repository.py  store_repository.py  tracked_product_repository.py  user_repository.py
expiration_date_tracking_app/src/services/: department_service.py  product_service.py  shelf_service.py  store_service.py  user_service.py
expiration_date_tracking_app/src/tests/entities/: department_test.py  employee_test.py  temporary_password_test.py  user_test.py
expiration_date_tracking_app/src/tests/repositories/: department_repository_test.py  permission_repository_test.py  product_repository_test.py  shelf_repository_test.py  store_repository_test.py  tracked_product_repository_test.py  user_repository_test.py
expiration_date_tracking_app/src/tests/services/: product_service_test.py  (+2 more)
expiration_date_tracking_app/src/ui/: change_password_view.py  create_merchant_view.py  department_view.py  employee_view.py  employees_view.py  home_view.py  login_view.py  shelf_view.py  store_view.py  ui.py
(+9 files in other folders)
