[project]
name = "expiration-date-tracking-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Hanna Jantunen",email = "hannajant@gmail.com"}
]
requires-python = "^3.12"
dependencies = [
]

[tool.poetry]
package-mode = false
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
