[project]
name = "expiration-date-tracking-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Hanna Jantunen",email = "hannajant@gmail.com"}
]
requires-python = "^3.12"
dependencies = [
    "bcrypt (>=5.0.0,<6.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "invoke (>=2.2.1,<3.0.0)"
]

[tool.poetry]
package-mode = false
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-dotenv (>=0.5.2,<0.6.0)",
    "coverage (>=7.13.5,<8.0.0)",
    "pylint (>=4.0.5,<5.0.0)",
    "autopep8 (>=2.3.2,<3.0.0)"
]
